[package]
name = "csvcellplot"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/vi/csvcellplot"
license = "MIT/Apache-2.0"
description = "CSV to image converter, plotting multiple columns of numbers using blocks with varied lightness"
categories = ["command-line-utilities"]
keywords = ["csv", "png", "plot", "image", "plotting"]


[dependencies]
anyhow = "1.0.69"
argh = "0.1.10"
csv = "1.2.0"
image = { version = "0.24.5", default-features = false, features = ["png"] }
imageproc = { version = "0.23.0", default-features = false }
lerp = "0.4.0"
num-integer = "0.1.45"
palette = "0.6.1"
rusttype = "0.9.3"
slab = "0.4.8"


[profile.release]
opt-level = 3
debug = 1
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
panic = 'abort'
